# CLI-passgen

./: .editorconfig  .gitignore  .npmignore  .prettierrc  README.md  package.json  pnpm-lock.yaml  pyproject.toml
.github/workflows/: release.yml
install/: install.ps1  install.sh
passgen_cli/: __init__.py  interrupt.py  main.py
passgen_cli/core/: __init__.py  clipboard.py  constants.py  generator.py
passgen_cli/ui/: __init__.py  display.py  interactive.py
scripts/: build.py  setup.bat  setup.ps1  setup.sh
src/: main.ts
src/core/: clipboard.ts  constants.ts  generator.ts
src/ui/: display.ts  interactive.ts
