[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "passgen-cli"
version = "1.0.0"
description = "A customizable password generator CLI tool"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "tukuyomil032", email = "tukuyomi032@gmail.com" }
]
keywords = ["password", "generator", "cli", "security"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Utilities",
]

[project.scripts]
passgen = "passgen_cli.main:main"

[project.urls]
Homepage = "https://github.com/tukuyomil032/CLI-passgen"
Repository = "https://github.com/tukuyomil032/CLI-passgen"
